# ScheduleBotAiogram

./: .env  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  fill_schedule.py  main.py  models.py  pyproject.toml  requirements.txt
handlers/: __init__.py  schedule.py  start.py
keyboards/: __init__.py  main_keyboard.py  reply.py
middlewares/: user_middleware.py
models/: Lesson.py  Subject.py  User.py  __init__.py
states/: __init__.py  settings.py
utils/: common.py  decorators.py  formatters.py  schedule.py  user.py
