[tool.poetry]
name = "schedulebotaiogram"
version = "0.1.0"
description = ""
authors = ["frazzex <rtmtolokonnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
dotenv = "^0.9.9"
tortoise-orm = "^0.20.0"
asyncpg = "^0.29.0"
aerich = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "database.TORTOISE_ORM"
location = "./migrations"
src_folder = "."
